<resources>
        <string name="app_name">WeatherApp-MCS</string>
        <string name="max_temp">Max temp</string>
        <string name="feels_like">Feels like</string>
        <string name="min_temp">Min temp</string>
        <string name="clear_sky">Clear Sky</string>
        <string name="location">Location</string>
        <string name="updated_at">updated at</string>
        <string name="_24_c">24°C</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
    </resources>
